# tyrum

./: .dockerignore  .gitignore  .oxlintrc.json  .oxlintrc.new-files.json  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.api  Dockerfile.executor-android  Dockerfile.executor-cli  Dockerfile.executor-http  Dockerfile.executor-web  Dockerfile.llm  Dockerfile.model-gateway  Dockerfile.planner  Dockerfile.policy  Dockerfile.vllm  Dockerfile.wallet  Dockerfile.watchers  LICENSE  LICENSES.md  Makefile  README.md  docker-compose.yml  oxlint.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  security_best_practices_report.md  tsconfig.base.json  tsconfig.json  vitest.config.ts
.devcontainer/: devcontainer.json
.githooks/: pre-commit  pre-push
.github/: CODEOWNERS  actionlint.yaml  codex-refinement.md  dependabot.yml  labels.yml  pull_request_template.md  settings.yml
config/: README.md  local.env.example  model_gateway.yml
docker/: vllm-entrypoint.sh
docs/: _README.md  activity.md  android_emulator_executor.md  api-reference.md  desktop.md  getting-started.md  index.html  index.md  install.md  license.md  lighthouse_baseline.md  planner_event_log.md  planner_state_machine.md  policy_service.md  product_concept_v1.md  telemetry_pipeline.md  terraform_baseline.md  vision.md  working_agreements.md
infra/: docker-compose.yml  otel-collector-config.yaml
patches/: @capacitor__cli@8.4.2.patch  @develar__schema-utils@2.6.5.patch  @jimp__core@0.22.12.patch  app-builder-lib@26.8.1.patch  better-sqlite3@12.6.2.patch  dmg-license@1.0.11.patch  dompurify@3.3.1.patch  file-type@16.5.4.patch  native-run@2.0.3.patch  prebuild-install@7.1.3.patch  usocket@0.3.0.patch
scripts/: apply_project_config.py  build-desktop-sandbox-image.sh  check-desktop-sandbox-native.mjs  check-file-type-patch.mjs  check-generated-api.mjs  check-native-sqlite.mjs  check-public-docs.sh  clear-typecheck-build-info.mjs  codex-thread-map.mjs  ensure-test-builds.mjs  ensure-typecheck-builds.mjs  format-changed.mjs  format-repo.mjs  generate-api-artifacts.mjs  i18n-check.mjs  i18n-extract.mjs  i18n-lib.mjs  install.sh  oxlint-categories-warn.json  oxlint-max-lines.json  package-bin-bootstrap.mjs  refinement-github-core.mjs  refinement-github-data.mjs  refinement-github.mjs  report-rebased-pr-overwrites-analysis.mjs  report-rebased-pr-overwrites-data.mjs  report-rebased-pr-overwrites-report.mjs  report-rebased-pr-overwrites.mjs  run-local-ci.mjs  setup-githooks.mjs  smoke-desktop-sandbox.sh  smoke-postgres-split.sh  smoke-sqlite-single-host.sh  smoke_model_gateway.sh  smoke_vllm_gateway.sh  verify_android_executor.sh  workspace-build-freshness.mjs  workspace-build-specs.mjs  workspace-package-builds.mjs  workspace-test-builds.mjs  (+2 more)
services/api/: Cargo.toml
services/api/migrations/: 0001_create_waitlist_schema.sql  0002_create_account_link_preferences.sql  0003_create_ingress_threads_messages.sql  0004_create_watchers_table.sql  0005_create_profiles_tables.sql
services/api/src/: account_linking.rs  audit.rs  cache.rs  capabilities.rs  ingress.rs  lib.rs  main.rs  metrics.rs  profiles.rs  telegram.rs  telemetry.rs  waitlist.rs  watchers.rs
services/api/tests/: audit_timeline.rs  telegram_ingress.rs  watcher_registration.rs
services/discovery/: Cargo.toml
services/discovery/src/: cache.rs  lib.rs  pipeline.rs  probe.rs  telemetry.rs
services/executor_android/: Cargo.toml
services/executor_android/src/: lib.rs  telemetry.rs
services/executor_android/tests/: android_executor.rs
services/executor_android/tests/fixtures/: README.md
services/executor_cli/: Cargo.toml
services/executor_cli/src/: lib.rs  telemetry.rs
services/executor_http/: Cargo.toml
services/executor_http/src/: lib.rs  telemetry.rs
services/executor_http/tests/: http_executor.rs
services/executor_web/: Cargo.toml
services/executor_web/src/: lib.rs  semantic.rs  telemetry.rs
services/executor_web/tests/: browser.rs
services/memory/: Cargo.toml
services/memory/migrations/: 0001_create_memory_schema.sql  0002_add_capability_memories.sql  0003_add_profiles.sql
services/memory/src/: lib.rs
services/memory/tests/: dal.rs
services/model_gateway/: Cargo.toml
services/model_gateway/src/: main.rs
services/planner/: Cargo.toml
services/planner/migrations/: 0001_create_event_log.sql  0003_add_capability_memories.sql  0005_add_capability_memory_metadata.sql
services/planner/src/: action.rs  capability_memory.rs  event_log.rs  http.rs  lib.rs  policy.rs  profiles.rs  replay.rs  state_machine.rs  wallet.rs
services/planner/tests/: book_call_plan.rs  capability_memory.rs  http_server.rs  memory_schema.rs  plan_audit.rs  plan_contract.rs  policy_denial.rs  replay_sandbox.rs  wallet_integration.rs
services/planner/tests/common/: mod.rs  policy.rs  postgres.rs  wallet.rs
services/policy/: Cargo.toml
services/policy/src/: lib.rs  main.rs  telemetry.rs
services/policy/tests/fixtures/: policy_check_with_user.json  policy_check_without_user.json
services/risk_classifier/: Cargo.toml
services/risk_classifier/config/: default_weights.toml
services/risk_classifier/src/: classifier.rs  config.rs  http.rs  lib.rs
services/tyrum-llm/: Cargo.toml
services/tyrum-llm/src/: lib.rs  main.rs
services/tyrum-llm/tests/: completions.rs
services/tyrum-wallet/: Cargo.toml
services/tyrum-wallet/src/: lib.rs  main.rs  telemetry.rs
services/tyrum-wallet/tests/: contract.rs
services/tyrum-wallet/tests/fixtures/: authorize_approve_request.json  authorize_approve_response.json  authorize_deny_request.json  authorize_deny_response.json  authorize_escalate_request.json  authorize_escalate_response.json
services/tyrum-watchers/: Cargo.toml
services/tyrum-watchers/src/: config.rs  error.rs  jetstream.rs  lib.rs  processor.rs
services/tyrum-watchers/tests/: common.rs  jetstream.rs  processor.rs
shared/tyrum-shared/: Cargo.toml
shared/tyrum-shared/src/: lib.rs  planner.rs  postconditions.rs  schema.rs  telegram.rs
specs/: asyncapi.json  (+1 more)
(+756 files in other folders)
