[workspace]
members = [
    "services/api",
    "services/discovery",
    "services/memory",
    "services/executor_http",
    "services/executor_cli",
    "services/executor_web",
    "services/executor_android",
    "services/planner",
    "services/policy",
    "services/tyrum-wallet",
    "shared/tyrum-shared"
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"

[workspace.lints.rust]
unsafe_code = "forbid"
