[workspace]
members = [
    "services/api",
    "services/discovery",
    "services/memory",
    "services/executor_http",
    "services/executor_cli",
    "services/executor_web",
    "services/executor_android",
    "services/planner",
    "services/policy",
    "services/tyrum-wallet",
    "shared/tyrum-shared",
    "services/tyrum-watchers",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
# Correctness & Robustness
unwrap_used = "deny"
expect_used = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_sign_loss = "deny"

# API & Library Design
missing_errors_doc = "deny"
missing_panics_doc = "deny"
must_use_candidate = "deny"

# Code Style & Performance
redundant_else = "deny"
string_add = "deny"
string_add_assign = "deny"
use_self = "deny"
