[package]
name = "tyrum-api"
version = "0.1.0"
edition = "2024"
authors = ["VirtunetBV <oss@virtunet.example>"]
description = "Tyrum API service skeleton"

[dependencies]
axum = { version = "0.7", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.43", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror = "1"

[dev-dependencies]
axum = { version = "0.7", features = ["json"] }
http-body-util = "0.1"
tower = "0.5"
