[package]
name = "tyrum-api"
version = "0.1.0"
edition = "2024"
authors = ["VirtunetBV <oss@virtunet.example>"]
description = "Tyrum API service skeleton"

[dependencies]
axum = { version = "0.7", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
opentelemetry = { version = "0.31", features = ["metrics", "logs"] }
opentelemetry-appender-tracing = "0.31.1"
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "metrics", "logs"] }
opentelemetry_sdk = { version = "0.31", features = ["metrics", "logs", "trace", "rt-tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "chrono", "uuid", "macros", "migrate"] }
thiserror = "2"
tokio = { version = "1.43", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tracing = "0.1"
tracing-opentelemetry = "0.32"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "registry"] }
validator = { version = "0.20", features = ["derive"] }
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"
anyhow = "1"
tyrum-shared = { path = "../../shared/tyrum-shared" }
uuid = { version = "1", features = ["serde", "v4"] }
redis = { version = "0.32", features = ["tokio-comp", "connection-manager"] }

[dev-dependencies]
axum = { version = "0.7", features = ["json"] }
http-body-util = "0.1"
serde_json = "1"
testcontainers = "0.25"
tower = "0.5"
tyrum-planner = { path = "../planner" }
serial_test = "2"
