[package]
name = "tyrum-discovery"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors = ["VirtunetBV <oss@virtunet.example>"]
description = "Discovery pipeline interfaces and stub implementations for Tyrum"

[lib]
name = "tyrum_discovery"
path = "src/lib.rs"

[dependencies]
tracing = { version = "0.1", default-features = false, features = ["std"] }

[lints]
workspace = true
