[package]
name = "tyrum-discovery"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors = ["VirtunetBV <oss@virtunet.example>"]
description = "Discovery pipeline interfaces and stub implementations for Tyrum"

[lib]
name = "tyrum_discovery"
path = "src/lib.rs"

[features]
test-support = []

[dependencies]
once_cell = "1.19"
opentelemetry = { version = "0.31", features = ["metrics"] }
redis = "0.32"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
tracing = { version = "0.1", default-features = false, features = ["std"] }
url = "2.5"
tokio = { version = "1.43", features = ["rt", "rt-multi-thread"] }
async-trait = "0.1"
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
opentelemetry_sdk = { version = "0.31", features = ["metrics", "testing"] }
tracing-subscriber = { version = "0.3", features = ["registry"] }
httpmock = { version = "0.8.1", features = ["https"] }

[lints]
workspace = true
