[package]
name = "tyrum-executor-android"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors = ["VirtunetBV <oss@virtunetbv.com>"]
description = "Android emulator executor runtime for Tyrum"

[lib]
path = "src/lib.rs"

[[bin]]
name = "android_executor"
path = "src/bin/android_executor.rs"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["json", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
opentelemetry = { version = "0.31", features = ["metrics", "logs"] }
opentelemetry-appender-tracing = "0.31.1"
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "metrics", "logs"] }
opentelemetry_sdk = { version = "0.31", features = ["metrics", "logs", "trace", "rt-tokio", "testing"] }
quick-xml = { version = "0.39", default-features = false, features = ["serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1.49", features = ["macros", "rt-multi-thread", "signal", "process", "time", "fs"] }
tracing = "0.1"
tracing-opentelemetry = "0.32"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "registry"] }
tyrum-shared = { path = "../../shared/tyrum-shared" }
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
serde_json = "1"
tempfile = "3"
tokio = { version = "1.49", features = ["macros", "rt-multi-thread", "time", "process", "fs", "signal"] }
