[package]
name = "tyrum-executor-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors = ["VirtunetBV <oss@virtunetbv.com>"]
description = "Sandboxed CLI executor runtime for Tyrum"

[lib]
path = "src/lib.rs"

[[bin]]
name = "cli_executor"
path = "src/bin/cli_executor.rs"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["json", "macros"] }
nix = { version = "0.30", default-features = false, features = ["user"] }
opentelemetry = { version = "0.31", features = ["metrics", "logs"] }
opentelemetry-appender-tracing = "0.31.1"
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "metrics", "logs"] }
opentelemetry_sdk = { version = "0.31", features = ["metrics", "logs", "trace", "rt-tokio", "testing"] }
once_cell = "1.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1.43", features = ["macros", "rt-multi-thread", "signal", "time", "process"] }
tracing = "0.1"
tracing-opentelemetry = "0.32"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "registry"] }
tyrum-shared = { path = "../../shared/tyrum-shared" }

[dev-dependencies]
serde_json = "1"
tempfile = "3"
tokio = { version = "1.43", features = ["macros", "rt-multi-thread", "time", "process"] }
