[package]
name = "tyrum-executor-http"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors = ["VirtunetBV <oss@virtunet.example>"]
description = "Generic HTTP executor runtime for Tyrum"

[lib]
path = "src/lib.rs"

[[bin]]
name = "http_executor"
path = "src/bin/http_executor.rs"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["json", "macros"] }
jsonschema = "0.29"
once_cell = "1.19"
opentelemetry = { version = "0.31", features = ["metrics", "logs"] }
opentelemetry-appender-tracing = "0.31.1"
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "metrics", "logs"] }
opentelemetry_sdk = { version = "0.31", features = ["metrics", "logs", "trace", "rt-tokio", "testing"] }
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1.43", features = ["macros", "rt-multi-thread", "signal", "time"] }
tracing = "0.1"
tracing-opentelemetry = "0.32"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "registry"] }
tyrum-shared = { path = "../../shared/tyrum-shared" }
url = { version = "2", features = ["serde"] }

[dev-dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["json", "macros"] }
serde_json = "1"
tokio = { version = "1.43", features = ["macros", "rt-multi-thread", "time"] }
