[package]
name = "tyrum-executor-web"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors = ["VirtunetBV <oss@virtunet.example>"]
description = "Generic web executor runtime for Tyrum"

[lib]
path = "src/lib.rs"

[[bin]]
name = "web_executor"
path = "src/bin/web_executor.rs"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["json", "macros"] }
once_cell = "1.19"
opentelemetry = { version = "0.31", features = ["metrics", "logs"] }
opentelemetry-appender-tracing = "0.31.1"
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "metrics", "logs"] }
opentelemetry_sdk = { version = "0.31", features = ["metrics", "logs", "trace", "rt-tokio", "testing"] }
# TODO(#90): re-enable driver download once build environment provides the required TLS chain.
playwright = "0.0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1.43", features = ["macros", "rt-multi-thread", "signal", "time"] }
tracing = "0.1"
tracing-opentelemetry = "0.32"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "registry"] }
tyrum-shared = { path = "../../shared/tyrum-shared" }
url = { version = "2", features = ["serde"] }

[dev-dependencies]
anyhow = "1"
serde_json = "1"
tokio = { version = "1.43", features = ["macros", "rt-multi-thread", "time"] }
html-escape = "0.2"
