[package]
name = "tyrum-memory"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors = ["VirtunetBV <oss@virtunet.example>"]
description = "Memory data access layer and CLI tooling for Tyrum"

[lib]
name = "tyrum_memory"
path = "src/lib.rs"

[[bin]]
name = "tyrum-memory"
path = "src/bin/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", default-features = false, features = [
  "runtime-tokio",
  "postgres",
  "chrono",
  "uuid",
  "json",
  "macros"
] }
thiserror = "1"
tracing = "0.1"
uuid = { version = "1", features = ["serde", "v4"] }
tokio = { version = "1.43", features = ["macros", "rt", "rt-multi-thread", "time"] }

[dev-dependencies]
once_cell = "1.19"
serde_json = "1"
sqlx = { version = "0.7", default-features = false, features = [
  "runtime-tokio",
  "postgres",
  "chrono",
  "uuid",
  "json",
  "macros",
  "migrate"
] }
testcontainers = "0.18"

[lints]
workspace = true
