[package]
name = "tyrum-model-gateway"
version = "0.1.0"
edition = "2024"
authors = ["VirtunetBV <oss@virtunet.example>"]
description = "Tyrum model gateway routing local vLLM and frontier APIs"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["json"] }
http = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
tokio = { version = "1.43", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "registry"] }
url = "2"
http-body-util = "0.1"
bytes = "1"
