[package]
name = "tyrum-planner"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors = ["VirtunetBV <oss@virtunet.example>"]
description = "Planner core utilities for Tyrum"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", default-features = false, features = [
  "runtime-tokio",
  "postgres",
  "chrono",
  "uuid",
  "json",
  "migrate",
  "macros"
] }
thiserror = "1"
tracing = "0.1"
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
anyhow = "1"
serde_json = "1"
sqlx = { version = "0.7", default-features = false, features = [
  "runtime-tokio",
  "postgres",
  "chrono",
  "uuid",
  "json",
  "migrate",
  "macros"
] }
testcontainers = "0.18"
tokio = { version = "1.43", features = ["macros", "rt", "rt-multi-thread", "time"] }
tyrum-memory = { path = "../memory" }

[lints]
workspace = true
