[package]
name = "tyrum-planner"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors = ["VirtunetBV <oss@virtunet.example>"]
description = "Planner core utilities for Tyrum"

[features]
default = []
audit-demo = [
    "dep:anyhow",
    "dep:testcontainers",
    "dep:tokio",
    "dep:tyrum-memory"
]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", default-features = false, features = [
  "runtime-tokio",
  "postgres",
  "chrono",
  "uuid",
  "json",
  "migrate",
  "macros"
] }
thiserror = "1"
tracing = "0.1"
uuid = { version = "1", features = ["serde", "v4"] }
anyhow = { version = "1", optional = true }
tokio = { version = "1.43", features = ["macros", "rt", "rt-multi-thread", "time"], optional = true }
testcontainers = { version = "0.18", optional = true }
tyrum-memory = { path = "../memory", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

[dev-dependencies]
anyhow = "1"
serde_json = "1"
sqlx = { version = "0.7", default-features = false, features = [
  "runtime-tokio",
  "postgres",
  "chrono",
  "uuid",
  "json",
  "migrate",
  "macros"
] }
testcontainers = "0.18"
tokio = { version = "1.43", features = ["macros", "rt", "rt-multi-thread", "time"] }
tyrum-memory = { path = "../memory" }

[[bin]]
name = "audit_demo"
path = "src/bin/audit_demo.rs"
required-features = ["audit-demo"]

[lints]
workspace = true
