[package]
name = "tyrum-planner"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors = ["VirtunetBV <oss@virtunet.example>"]
description = "Planner core utilities for Tyrum"

[features]
default = ["dep:tyrum-memory"]
audit-demo = ["dep:testcontainers"]

[dependencies]
axum = { version = "0.7", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = [
  "runtime-tokio",
  "postgres",
  "chrono",
  "uuid",
  "json",
  "migrate",
  "macros"
] }
thiserror = "2"
tracing = "0.1"
uuid = { version = "1", features = ["serde", "v4"] }
anyhow = "1"
tokio = { version = "1.43", features = ["macros", "net", "rt", "rt-multi-thread", "signal", "time"] }
testcontainers = { version = "0.25", optional = true }
tyrum-memory = { path = "../memory", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tyrum-shared = { path = "../../shared/tyrum-shared" }
tower-http = { version = "0.6", features = ["limit"] }
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls"] }
url = "2"
tyrum-discovery = { path = "../discovery", features = ["test-support"] }
tyrum-wallet = { path = "../tyrum-wallet" }
clap = { version = "4.5", features = ["derive", "env"] }
opentelemetry = { version = "0.31", features = ["metrics"] }
tyrum-risk-classifier = { path = "../risk_classifier" }

[dev-dependencies]
anyhow = "1"
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = [
  "runtime-tokio",
  "postgres",
  "chrono",
  "uuid",
  "json",
  "migrate",
  "macros"
] }
testcontainers = "0.25"
tokio = { version = "1.43", features = ["macros", "rt", "rt-multi-thread", "time"] }
tyrum-memory = { path = "../memory" }
tower = "0.5"
http-body-util = "0.1"
opentelemetry_sdk = { version = "0.31", features = ["metrics", "testing"] }
tyrum-risk-classifier = { path = "../risk_classifier" }
async-trait = "0.1"

[[bin]]
name = "audit_demo"
path = "src/bin/audit_demo.rs"
required-features = ["audit-demo"]

[[bin]]
name = "planner_http"
path = "src/bin/http_server.rs"

[[bin]]
name = "replay_sandbox"
path = "src/bin/replay_sandbox.rs"

[lints]
workspace = true
