[package]
name = "tyrum-policy"
version = "0.1.0"
edition = "2024"
authors = ["VirtunetBV <oss@virtunet.example>"]
description = "Tyrum policy check service skeleton"

[dependencies]
axum = { version = "0.8", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.43", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "registry"] }
thiserror = "2"
once_cell = "1.19"
opentelemetry = { version = "0.31", features = ["metrics", "logs"] }
opentelemetry-appender-tracing = "0.31.1"
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "metrics", "logs"] }
opentelemetry_sdk = { version = "0.31", features = ["metrics", "logs", "trace", "rt-tokio"] }
tracing-opentelemetry = "0.32"
anyhow = "1"
tyrum-shared = { path = "../../shared/tyrum-shared" }

[dev-dependencies]
axum = { version = "0.8", features = ["json"] }
http-body-util = "0.1"
tower = "0.5"
serde_json = "1"
