[package]
name = "tyrum-risk-classifier"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors = ["VirtunetBV <oss@virtunet.example>"]
description = "Deterministic risk classifier stub for planner cost controls"

[dependencies]
axum = { version = "0.7", features = ["json"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tokio = { version = "1.49", features = ["macros", "rt-multi-thread", "signal"] }

[dev-dependencies]
axum = { version = "0.7", features = ["json"] }
serde_json = "1"
tower = "0.5"

[lints]
workspace = true
