[package]
name = "tyrum-wallet"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
axum = { version = "0.8", features = ["json"] }
once_cell = "1.19"
opentelemetry = { version = "0.31", features = ["metrics", "logs"] }
opentelemetry-appender-tracing = "0.31.1"
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "metrics", "logs"] }
opentelemetry_sdk = { version = "0.31", features = ["metrics", "logs", "trace", "rt-tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.43", features = ["full"] }
tracing = "0.1"
tracing-opentelemetry = "0.32"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "registry"] }
anyhow = "1"

[dev-dependencies]
axum = { version = "0.8", features = ["json"] }
http-body-util = "0.1"
serde_json = "1"
tower = "0.5"

[lints]
workspace = true
