[package]
name = "tyrum-watchers"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
async-nats = "0.44.1"
futures = "0.3"
thiserror = "1"
tokio = { version = "1.43", features = ["macros", "rt", "rt-multi-thread", "time"] }

[dev-dependencies]
anyhow = "1"
testcontainers = "0.18"

[lints]
workspace = true
