[package]
name = "tyrum-watchers"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
async-nats = "0.46.0"
futures = "0.3"
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1.43", features = ["macros", "rt", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tyrum-shared = { path = "../../shared/tyrum-shared" }

[dev-dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["macros"] }
chrono = { version = "0.4", default-features = true }
testcontainers = { version = "0.27", features = ["http_wait_plain"] }

[lints]
workspace = true
