[package]
name = "tyrum-shared"
version = "0.1.0"
edition = "2024"
description = "Shared schemas and normalization utilities for Tyrum services"
license = "Apache-2.0"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[dev-dependencies]
pretty_assertions = "1.4"
